tests/baselines/reference/importAndVariableDeclarationConflict4.errors.txt
==== tests/cases/compiler/importAndVariableDeclarationConflict4.ts (1 errors) ====
    module m {
      export var m = '';
    }
    
    var x = '';
        ~~~~~~
!!! importAndVariableDeclarationConflict4.ts(5,5): error TS4026: Variable declaration cannot have the same name as an import declaration.
    import x = m.m;
    